@@ -10,10 +10,31 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+//    testImplementation(platform("org.junit:junit-bom:5.7.0"))
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+//    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+
 }
+
 
 test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
+    testLogging {
+        showStandardStreams = true
+    }
 }
+
+sourceSets {
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
+}
+
+//tasks.withType(Test){
+//    scanForTestClasses = false
+//    include "**/*Test.class"
+//}
